<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AtmManagementActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/atm"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/botonLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atm_list"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <Button
        android:id="@+id/botonAnadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atm_add"
        app:layout_constraintTop_toBottomOf="@id/botonLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <Button
        android:id="@+id/botonMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atm_maps"
        app:layout_constraintTop_toBottomOf="@id/botonAnadir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>