<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AtmFormActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:title="Gestión de Cajero"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

    <TextView
        android:id="@+id/latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitudx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoDireccion"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textoLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/latitud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

    <TextView
        android:id="@+id/longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitudx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLatitud"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="16sp" />

    <!-- Campo Longitud -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textoLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/longitud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

    <!-- Botón Guardar -->
    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@id/textoLongitud"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

    <!-- Botón Cancelar -->
    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        app:layout_constraintStart_toEndOf="@id/botonGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLongitud"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>